<resources>
    <string name="app_name">Game24App</string>
    <string name="version">The 24 Game: Version %1$s</string>
    <string name="copyright">\u00A9 2018 Jeffrey Chen All Rights Reserved</string>
    <string name="credits">Software: Jeffrey Chen, Blair Chen\nDesign: Jeffrey Chen, Sandra Chen\n\nMusic: "Rainbows" Kevin MacLeod (incompetech.com)\nLicensed under Creative Commons: By Attribution 3.0 License\nhttp://creativecommons.org/licenses/by/3.0/</string>
    <string name="time_trial">Timed Play</string>
    <string name="free_play">Free Play</string>
    <string name="classic">Classic</string>
    <string name="fractions">Fractions</string>
    <string name="difficulty">Fraction Mode</string>
    <string name="settings_title">Settings</string>
    <string name="help">The goal of the game is to make 24 using 4 numbers and the 4 arithmetic operations.
        Combine numbers by tapping two numbers and an operation.
        The order you tap the tiles does not matter except for division, where the first number tapped is divided by the second.</string>
    <string name="stats_free_play"><b>Free Play Stats</b>\nClassic Puzzles Solved: %1$d\nFraction Puzzles Solved: %2$d\n</string>
    <string name="stats_timed_play"><b>Timed Play Stats</b>\nClassic High Score: %1$d\nFraction High Score: %2$d\n</string>
    <string name="stats_multiplayer"><b>Multiplayer Stats</b>\nGames Won: %1$d\nGames Completed: %2$d\n</string>
    <string name="score">Score: %1$d</string>
    <string name="num_hints">x%1$d</string>
    <string name="hint_message">Number of hints left: %1$d (max %2$d)</string>
    <string name="hint_disabled">Ads disabled in timed play.</string>
    <string name="game_over">Time\'s Up!</string>
    <string name="game_over_score">Your Score Was: %1$d</string>
    <string name="game_over_hi_score">Your Highest Score Was: %1$d</string>
    <string name="new_hi_score">New High Score!</string>
    <string name="game_over_replay">Play Again</string>
    <string name="game_over_end">Main Menu</string>
    <string name="online_play">Multiplayer</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Join Game</string>
    <string name="submit_room">Submit</string>
    <string name="load_room">Finding you a room...</string>
    <string name="wait_room">Waiting for other player...</string>
    <string name="enter_room">Room Number:</string>
    <string name="bad_room">Room not found, try again:</string>
    <string name="check_room">Checking room...</string>
    <string name="online_win">You Win!</string>
    <string name="online_lose">You Lose.</string>
</resources>
