<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.jeff.game24app.HomeActivity"
    android:background="@color/background_gray">


    <org.jeff.game24app.views.FontButton
        android:id="@+id/create_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="250dp"
        android:text="@string/create_game"
        style="@style/HomeButton"
        android:visibility="visible" />

    <org.jeff.game24app.views.FontButton
        android:id="@+id/join_game"
        style="@style/HomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_game"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_game" />

    <org.jeff.game24app.views.FontButton
        android:id="@+id/submit_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/join_game"
        android:text="@string/submit_room"
        style="@style/HomeButton" />

    <TextView
        android:id="@+id/room_text"
        style="@style/HomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="16"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="@id/create_game"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/create_game" />

    <EditText
        android:id="@+id/room_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:gravity="center_horizontal"
        android:maxLength="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/join_game"
        app:layout_constraintLeft_toLeftOf="@id/join_game"
        app:layout_constraintRight_toRightOf="@id/join_game"
        app:layout_constraintTop_toTopOf="@id/join_game" />

</android.support.constraint.ConstraintLayout>